[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "query_building: marks tests that involve QueryBuilding",
]

[project]
name = "accessgap-utils"
version = "0.1.0"
# Add other project metadata here (e.g., description, authors, dependencies)

[tool.ruff]
line-length = 88
exclude = [
    ".git",
    "__pycache__",
    "**/docs/slides/*",
    "old,build",
    "dist",
    "**/project/**/*",
    "**/mt_diagrams/*",
    "**/minitorch/testing.py",
    "**/docs/**/*",
]
select = ["D", "E", "F", "N", "ANN"]
fixable = [
    "A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W",
    "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT",
    "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH",
    "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT",
]
unfixable = []

[tool.ruff.extend-per-file-ignores]
"tests/*.py" = ["D"]
